--- a/views/shop.html
+++ b/views/shop.html
@@ -14,7 +14,7 @@
             <ul>
                 <li>
                     <a href="/">Shop</a>
-                    <a href="/add-product">Add Product</a>
+                    <a href="/admin/add-product">Add Product</a>
                 </li>
             </ul>
         </nav>
