--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -27,7 +27,7 @@
             <% } %>
         </div>
         <% } else {%>
-            <h1>Page not found</h1>
+            <h1>No products yet</h1>
         <% }%>
     </main>
 <%- include('includes/end.ejs') %>
