--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -6,9 +6,9 @@
         <%- include('../includes/navigation.ejs') %>
 
             <main>
-                <% if( prods.length> 0) { %>
+                <% if (prods.length > 0) { %>
                     <div class="grid">
-                        <% for(let product of prods) { %>
+                        <% for (let product of prods) { %>
                             <article class="card product-item">
                                 <header class="card__header">
                                     <h1 class="product__title">
@@ -16,10 +16,11 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="<%= product.imageUrl%>" alt="<%= product.title %>">
+                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">$<%= product.price %>
+                                    <h2 class="product__price">$
+                                        <%= product.price %>
                                     </h2>
                                     <p class="product__description">
                                         <%= product.description %>
@@ -28,14 +29,15 @@
                                 <div class="card__actions">
                                     <a href="/admin/edit-product" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
-                                        <button type="submit" class="btn">Delete</button>
+                                        <button class="btn" type="submit">Delete</button>
                                     </form>
+
                                 </div>
                             </article>
                             <% } %>
                     </div>
-                    <% } else {%>
-                        <h1>No products yet</h1>
-                        <% }%>
+                    <% } else { %>
+                        <h1>No Products Found!</h1>
+                        <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
